Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.7
-
Component/s: Replication, Tests
-
Labels:None
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/8057/steps/test_2/logs/stdio
rpl.rpl_killed_ddl 'row' w4 [ fail ] Found warnings/errors in server log file!
|
Test ended at 2017-05-08 17:51:35
|
line
|
2017-05-08 17:51:34 2964765504 [ERROR] mysqld: Can't find record in '#sql-1d62_a'
|
^ Found warnings in /mnt/buildbot/build/mariadb-10.2.6/mysql-test/var/4/log/mysqld.1.err
|