MDEV-12756 rpl.rpl_killed_ddl fails in buildbot with 'Can't find record'

The issue was that my_errno was not set properly when a repair was killed,
which confused the rpl_killed_ddl script.

I also added an extra test line in varchar.inc to ensure we don't give
duplicate error rows.